--- a/app/assets/stylesheets/admin/html-receipt.css
+++ b/app/assets/stylesheets/admin/html-receipt.css
@@ -1,51 +1,62 @@
-@page  { 
-	margin-left:8mm;
-	margin-right:8mm;
-	margin-top:8mm;
-	margin-bottom:8mm;
-	 }
-
-body {
-    font-family:"Trebuchet MS";
-	font-size:32px;
-	color:#000000;
-    width: 700px;
+@page {
+  size: auto;
+  /* auto is the initial value */
+  margin: 0mm;
+  /* this affects the margin in the printer settings */
 }
 
+html {
+  background-color: #FFFFFF;
+  margin: 0px;
+  /* this affects the margin on the html before sending to printer */
+}
+
+body {
+  /* border: solid 1px; */
+  margin: 1mm 1mm 1mm 1mm;
+  /* margin you want for the content */
+  font-family: "Trebuchet MS";
+  color: #000000;
+  width: 58mm;
+}
 
 div#header {
   text-align: center;
-  padding: 6px;
   line-height: 1.3;
-  width: 700px;
+  width: 58mm;
 }
 
 #header img {
-  max-width: 670px;
+  max-width: 100%;
 }
 
-.shop { font-weight: bold; font-size: 40px; line-height: 1.2;}
-.info { padding: 6px; font-size: 30px; text-align: center; line-height: 1.3; width: 700px;}
+.shop {
+  font-weight: bold;
+  font-size: 40px;
+  line-height: 1.2;
+}
+
+.info {
+  font-size: 30px;
+  text-align: center;
+  line-height: 1.3;
+  width: 58mm;
+}
 
 .line_items {
-  width: 700px;
+  width: 58mm;
 }
 
 div.wrapper {
-  width: 700px;
-  padding-top: 48px;
+  width: 58mm;
   text-align: left;
 }
 
-div.totals {
-  margin-bottom: 20px;
-  padding: 6px;
-}
+div.totals {}
 
 table.totals {
-  width: 700px;
+  width: 58mm;
 }
-
 
 .cell.total {
   text-align: right;
@@ -59,19 +70,15 @@ table.totals {
   width: 80px;
 }
 
- 
 div.footer {
-  width: 700px;
-  padding: 6px;
+  width: 58mm;
   text-align: center;
 }
 
 .footer .bold {
   width: 100px;
 }
+
 .footer .cell {
-  width: 220px;
+  width: 219px;
 }
-
-
-
