--- a/app/views/spree/admin/invoice/_receipt_header.html.erb
+++ b/app/views/spree/admin/invoice/_receipt_header.html.erb
@@ -1,12 +1,39 @@
-<table width="700" border="0" cellspacing="0" cellpadding="0">
+<table border="0" cellspacing="0" cellpadding="0">
   <tr>
-    <td width="272"><%= logo %></td>
-    <td class="info" align="center" style=" font-size: 14px; letter-spacing: 2px; line-height: 1.3; padding: 6px; text-align: center; text-transform: uppercase; width: 700px;">
+    <td><%= image_tag Spree::HtmlInvoice::Config[:html_invoice_logo_path] || "store/invoice_logo.jpg", id: "logo", style: "width 54mm; padding-bottom: 15px;" %></td>
+  </tr>
+  <tr>
+    <td class="info" align="center" style=" font-size: 14px; letter-spacing: 2px; line-height: 1.3; text-align: center; text-transform: uppercase; padding-bottom: 6px ">
       <font face="Georgia,"Times New Roman",Times,serif" color="black">
-      Fredrikinkatu 19 (Viiskulma) <br>
-      00120 Helsinki<br><br>
-      <%= Spree.l(@order.completed_at.to_date) if @order.completed_at %>&nbsp;/&nbsp;
-      <%= Spree.t(:order_number, number: @order.number) %></font>
+      <%==Spree.t(:footer_right2)%></br>
+    </td>
+  </tr>
+  <tr>
+    <td class="info" align="center" style=" font-size: 14px; letter-spacing: 2px; line-height: 1.3; text-align: center; text-transform: uppercase; ">
+      <font face="Georgia,"Times New Roman",Times,serif" color="black">
+      Tel. <%= @order.ship_address.phone%>
+      </font>
+    </td>
+  </tr>
+  <tr>
+    <td class="info" align="center" style=" font-size: 14px; letter-spacing: 2px; line-height: 1.3; text-align: center; text-transform: uppercase; padding-bottom: 6px ">
+      <font face="Georgia,"Times New Roman",Times,serif" color="black">
+      <%= "#{@order.ship_address.address1} #{@order.ship_address.address2}" %>
+      </font>
+    </td>
+  </tr>
+  <tr>
+    <td class="info" align="center" style=" font-size: 14px; letter-spacing: 2px; line-height: 1.3; text-align: center; text-transform: uppercase; ">
+      <font face="Georgia,"Times New Roman",Times,serif" color="black">
+      <%= order_time(@order.completed_at) if @order.completed_at %>
+      </font>
+    </td>
+  </tr>
+  <tr>
+    <td class="info" align="center" style=" font-size: 14px; letter-spacing: 2px; line-height: 1.3; text-align: center; text-transform: uppercase; ">
+      <font face="Georgia,"Times New Roman",Times,serif" color="black">
+        <%= Spree.t(:order_number, number: @order.number) %>
+      </font>
     </td>
   </tr>
 </table>
