--- a/app/views/spree/admin/invoice/_totals_invoice.html.erb
+++ b/app/views/spree/admin/invoice/_totals_invoice.html.erb
@@ -1,17 +1,13 @@
 <table class="totals">
+  <% iva = @order.total*0.16 %>
+  <% total_sinIVA = @order.total - iva  %>
   <tr>
     <td class="cel1 bold"><%= Spree.t(:item_total) %>: </td>
-    <td class="cel2 bold cell" align="right"><%= @order.display_item_total.to_html %></td>
+    <td class="cel2 bold cell" align="right"><%= number_to_currency total_sinIVA %></td>
   </tr>
-  <% @order.all_adjustments.eligible.each do |adjustment| %>
-    <tr>
-      <td class="cel1 bold"><%= show_label(adjustment) %>:</td>
-      <td class="cel2 cell" align="right"><%= adjustment.display_amount.to_html %></td>
-    </tr>
-  <% end %>
   <tr>
-    <td class="cel1 bold"> <%= Spree.t(:shipment_amount) %>: </td>
-    <td class="cel2 cell" align="right"><%= @order.display_shipment_total.to_html %></td>
+    <td class="cel1 bold">IVA: </td>
+    <td class="cel2 cell" align="right"><%= number_to_currency iva %></td>
   </tr>
   <tr>
     <td class="cel1 bold"><strong><%= Spree.t(:order_total) %>:</strong></td>
