--- a/app/views/spree/admin/invoice/_totals_receipt.html.erb
+++ b/app/views/spree/admin/invoice/_totals_receipt.html.erb
@@ -1,20 +1,16 @@
-<table width="700" cellspacing="0" cellpadding="7" border="0" class="line_items" style="border:solid 1px #cccccc; border-bottom:none; margin:30px 0;" >
+<table cellspacing="0" cellpadding="4" border="0" class="line_items" style="border:solid 1px #cccccc; border-bottom:none;" >
+  <% iva = @order.total*0.16 %>
+  <% total_sinIVA = @order.total - iva  %>
   <tr>
     <td class="cel1 bold"><%= t(:item_total) %>: </td>
-    <td class="cel2 bold cell" align="right"><%= @order.display_item_total.to_html %></td>
+    <td class="cel2 bold cell" align="right"><%= number_to_currency total_sinIVA %></td>
   </tr>
-  <% @order.all_adjustments.eligible.each do |adjustment| %>
   <tr class="total">
-    <td class="cel1 bold" style="border-bottom:solid 1px #cccccc;"><font face="Arial, Helvetica, sans-serif" size="2"><%= show_label(adjustment) %>:</font></td>
-    <td class="cel2 cell" align="right" style="border-bottom:solid 1px #cccccc;"><font face="Arial, Helvetica, sans-serif" size="2"><%= adjustment.display_amount.to_html %></font></td>
-  </tr>
-  <% end %>
-  <tr>
-    <td class="cel1 bold" style="border-bottom:solid 1px #cccccc;"><font face="Arial, Helvetica, sans-serif" size="2"> <%= Spree.t(:shipment_amount) %>: </td>
-    <td class="cel2 cell" align="right" style="border-bottom:solid 1px #cccccc;"><font face="Arial, Helvetica, sans-serif" size="2"><%= @order.display_shipment_total.to_html %></font></td>
+    <td class="cel1 bold" style="border-bottom:solid 1px #cccccc;"><font face="Arial, Helvetica, sans-serif" size="2">IVA:</font></td>
+    <td class="cel2 cell" align="right" style="border-bottom:solid 1px #cccccc;"><font face="Arial, Helvetica, sans-serif" size="2"><%= number_to_currency iva %></font></td>
   </tr>
   <tr>
-    <td class="cel1 bold" style="border-bottom:solid 1px #cccccc;"><font face="Arial, Helvetica, sans-serif" size="2"><strong><%= t(:order_total) %>:</strong></font></td>
-    <td class="cel2 cell" align="right" style="border-bottom:solid 1px #cccccc;"><font face="Arial, Helvetica, sans-serif" size="2"><strong><span id='summary-order-total'><%= number_to_currency @order.total %></span></strong></font></td>
+    <td class="cel1 bold" style="border-bottom:solid 1px #cccccc;"><strong><%= t(:order_total) %>:</strong></td>
+    <td class="cel2 cell" align="right" style="border-bottom:solid 1px #cccccc;"><strong><span id='summary-order-total'><%= number_to_currency @order.total %></span></strong></td>
   </tr>
 </table>
